--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,26 @@
 <%- include header %>
-<form>
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="SEARCH" name="keyword">
-        <span class="input-group-btn">
-            <input type="submit" value="搜索" class="btn btn-default" />
-        </span>
+<!-- <div class="container"> -->
+    <ul class="list-group col-sm-8">
+         <li class="list-group-item">
+             <h3><a href="#">学习node.js</a></h3>
+             <p class="info">
+                 <span>作者：ryuan</span>
+                 <span>|</span>
+                 <span>日期：2017-10-07</span>
+             </p>
+         </li>
+         <hr>
+          <li class="list-group-item">
+             <h3><a href="#">express+bootstrap搭建个人博客</a></h3>
+             <p class="info">
+                 <span>作者：ryuan</span>
+                 <span>|</span>
+                 <span>日期：2017-10-10</span>
+             </p>
+         </li>
+    </ul>
+    <div class="col-sm-offset-1 col-sm-3">
+        <h4>公告</h4>
     </div>
-</form>
-
-<ul class="list-group">
-     <li class="list-group-item">
-         <h3><a href="#">学习node.js</a></h3>
-         <p class="info">
-             <span>作者：小蚁</span>
-             <span>|</span>
-             <span>日期：2016-12-14</span>
-         </p>
-     </li>
-     <hr>
-</ul>
+<!-- </div> -->
 <%- include footer %>
