--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,11 +11,11 @@
     <script src="/javascripts/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">RY-Blog</a>
+                <a class="navbar-brand" href="/">RyBlog</a>
             </div>
             <a class="navbar-brand" href="/">首页</a>
             <ul class="nav navbar-nav navbar-right">
