--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,20 +2,21 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= title %> - Blog</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
-
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/jquery-3.2.1.min.js"></script>
 </head>
 <body>
+
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">RyBlog</a>
+                <a class="navbar-brand" href="/">ryuan</a>
             </div>
             <a class="navbar-brand" href="/">首页</a>
             <ul class="nav navbar-nav navbar-right">
@@ -25,5 +26,6 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-sm-12">
